// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "Users.username.repo.src.components.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "Users.username.repo.src.components.headerTitle"
    }
});
"
`;

exports[`default default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`default eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`default import as 1`] = `
"import { defineMessages as m } from 'react-intl';
m({
    hello: 'hello'
});
"
`;

exports[`default leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`default leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "Users.username.repo.src.components.world"
    }
});
"
`;

exports[`default multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`default not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`default not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`default not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`default not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`default not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`default string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    'hello': {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`default when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`default with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world ".concat(1)
    }
});
"
`;

exports[`default with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`default with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`extractComments = false default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`extractComments = false leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`extractComments = false leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "Users.username.repo.src.components.world"
    }
});
"
`;

exports[`filebase = true default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "App.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`includeExportName = all default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`includeExportName = all multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`includeExportName = true default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.messages.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`includeExportName = true multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.messages.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.messages.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`moduleSourceNameTest default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`moduleSourceNameTest moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`relativeTo = "" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`relativeTo = "" multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`relativeTo = "../" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`relativeTo = "../" multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`removePrefix = "src" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = "src.__fixtures__" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = "src.__fixtures__", includeExportName = true default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.messages.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = "src.__fixtures__", includeExportName = true multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.messages.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.messages.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`removePrefix = "src/" -- with slash default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = /__fixtures__/ default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = false default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = false multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`removePrefix = true, includeExportName = all default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = true, includeExportName = all multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users.username.repo.src.components.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`removePrefix = true, includeExportName = true default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "messages.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`removePrefix = true, includeExportName = true multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "messages.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "messages.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`separator = "" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "UsersusernamereposrccomponentsApphello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`separator = "" multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "UsersusernamereposrccomponentsApphello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "UsersusernamereposrccomponentsApphello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`separator = "_" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Users_username_repo_src_components_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`separator = "_" multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Users_username_repo_src_components_hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Users_username_repo_src_components_hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`separator = "foo" default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "Usersfoousernamefoorepofoosrcfoocomponentsfoohello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`separator = "foo" multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "Usersfoousernamefoorepofoosrcfoocomponentsfoohello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "Usersfoousernamefoorepofoosrcfoocomponentsfoohello",
        "defaultMessage": "hello world"
    }
});
"
`;
